# job-research-agent

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
job-research-agent/: client.py  config.py  flow.py  main.py  nodes.py
job-research-agent/utils/: call_llm.py  pdf_utils.py
tests/: test_app.py  test_client.py  test_pdf_utils.py
