[project]
name = "job-research-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "evjohns005",email = "ev.johns005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pocketflow (>=0.0.3,<0.0.4)"
]

[tool.poetry]
packages = [{include = "job_research_agent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
